--- a/app.html
+++ b/app.html
@@ -5,7 +5,7 @@
   </head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
-    <div class="waifu" style="position: fixed !important;">
+    <div class="waifu">
       <div class="waifu-tips"></div>
       <canvas id="live2d" class="live2d"></canvas>
       <div class="waifu-tool">
